# chromat

./: .dockerignore  .gitignore  .pdm-python  README.md  fly.toml  main.py  pyproject.toml  requirements.txt  run.py  template.json
assets/: manifest.json
chromat_mm/: __init__.py  app.py  main.py
chromat_mm/util/: __init__.py  chrocolor.py
chromat_mm/widgets/: __init__.py  colorpicker.py
data/: defaults.json
lab/phase0/: color_random.py  colors.py  template.txt
src/: chrocolor.py  colorpicker.py  connector.py  database.py  main.py  panels.py  setting.py
