
[project]
name = "chromat-mm"
version = "0.0.1"
description = "soon!"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "flet>=0.7.4",
    "coloraide>=2.4",
    "rich>=13.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "sourcery>=1.5.0",
]
