
[project]
name = "chromat"
version = "0.0.1"
description = "color theming tool!"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "coloraide>=2.4",
    "flet>=0.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "rich>=13.4.2",
]
